# amd-ucode-patch

./: README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  scorecard.yml
src/amd_ucode_patch/: banner.py  cli_info.py  naming.py  parse.py
src/amd_ucode_patch/cli/: argtypes.py  info.py  paths.py  sign.py
src/amd_ucode_patch/structures/: body.py  body_header.py  patch.py  patch_date.py  patch_header.py  patch_level.py  signature.py  ucode_patch.py  ucode_patch_header.py  verified_header.py
src/amd_ucode_patch/utils/: bcd.py  cmac.py  entrysign.py  numtheory.py  rsa.py  xor.py
