[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "amd-ucode-patch"
dynamic = ["version"]
authors = [
  { name="Antonio Vázquez Blanco", email="antoniovazquezblanco@gmail.com" },
  { name="Kaya Erchiran" },
]
description = "A Python library for parsing and interpreting AMD microcode patch files"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "rich",
]

[project.scripts]
amd_ucode_patch_info = "amd_ucode_patch.cli_info:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/amd_ucode_patch"]
