[build-system]
requires = ["hatchling==1.30.1", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "amd-ucode-patch"
dynamic = ["version"]
authors = [
  { name="Antonio Vázquez Blanco", email="antoniovazquezblanco@gmail.com" },
  { name="Kaya Erchiran" },
]
description = "A Python library for parsing and interpreting AMD microcode patch files"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
license-files = ["LICENSE.md"]
keywords = ["amd", "microcode", "ucode", "patch", "parser", "x86"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
  "amd-cpuid==1.0.1",
  "rich==15.0.0",
]

[project.urls]
Homepage = "https://github.com/amd-zenith/amd-ucode-patch"
Repository = "https://github.com/amd-zenith/amd-ucode-patch"
Issues = "https://github.com/amd-zenith/amd-ucode-patch/issues"

[project.scripts]
amd_ucode_patch_info = "amd_ucode_patch.cli.info:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/amd_ucode_patch"]
